Change scanning method&optimize code&fix CVE
Former-commit-id: 3940a666ed152ee1bb3a7f9ace1ff64269565557